--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             padding: 20px;
             display: flex;
             justify-content: center;
-            align-items: center;
+            align-items: flex-start; /* 改為 top align 以適應較長的內容 */
         }
 
         .container {
@@ -22,8 +22,10 @@
             border-radius: 20px;
             box-shadow: 0 20px 60px rgba(0,0,0,0.3);
             padding: 40px;
-            max-width: 800px;
+            max-width: 1000px; /* 加寬容器以容納網格 */
             width: 100%;
+            margin-top: 40px;
+            margin-bottom: 40px;
         }
 
         h1 {
@@ -52,32 +54,88 @@
             100% { transform: rotate(360deg); }
         }
 
-        ul { list-style: none; margin-top: 20px; }
+        /* 修改列表為網格佈局 */
+        ul { 
+            list-style: none; 
+            margin-top: 20px;
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(180px, 1fr)); /* 自動適應寬度 */
+            gap: 20px;
+        }
 
-        li { margin: 10px 0; }
+        li { margin: 0; }
 
+        /* 卡片樣式 */
         a {
-            display: block;
-            padding: 15px 20px;
-            border-radius: 10px;
+            display: flex;
+            flex-direction: column;
             text-decoration: none;
             color: #333;
-            background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
-            border-left: 4px solid #667eea;
+            background: white;
+            border-radius: 15px;
+            box-shadow: 0 4px 15px rgba(0,0,0,0.08);
             transition: all 0.3s ease;
+            overflow: hidden;
+            height: 100%;
+            border: 1px solid rgba(0,0,0,0.05);
         }
 
         a:hover {
-            transform: translateX(8px);
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            color: white;
+            transform: translateY(-5px);
+            box-shadow: 0 12px 25px rgba(0,0,0,0.15);
+        }
+
+        /* 縮圖區域 */
+        .thumb-box {
+            width: 100%;
+            height: 120px;
+            background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            overflow: hidden;
+            position: relative;
+        }
+
+        .thumb-box img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            transition: transform 0.5s ease;
+        }
+
+        a:hover .thumb-box img {
+            transform: scale(1.1);
+        }
+
+        .thumb-icon {
+            font-size: 3em;
+            opacity: 0.7;
+        }
+
+        /* 標題區域 */
+        .title-box {
+            padding: 15px;
+            text-align: center;
+            background: white;
+            flex-grow: 1;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .title-text {
+            font-weight: bold;
+            font-size: 1em;
+            word-break: break-word;
+            line-height: 1.4;
         }
 
         .pagination {
             display: flex;
             justify-content: center;
             gap: 10px;
-            margin-top: 30px;
+            margin-top: 40px;
         }
 
         button {
@@ -87,11 +145,19 @@
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
             color: white;
             cursor: pointer;
+            font-size: 1em;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+            transition: background 0.3s;
+        }
+
+        button:hover {
+            opacity: 0.9;
         }
 
         button:disabled {
             background: #ccc;
             cursor: not-allowed;
+            box-shadow: none;
         }
 
         .info {
@@ -100,6 +166,7 @@
             padding: 15px;
             border-radius: 10px;
             margin-bottom: 20px;
+            text-align: center;
         }
 
         .count {
@@ -116,16 +183,16 @@
 
     <div id="loading" class="loading">
         <div class="spinner"></div>
-        <p>正在載入檔案列表...</p>
+        <p>正在載入遊戲列表...</p>
     </div>
 
     <div id="content" style="display:none;">
-        <div class="info"><strong>提示：</strong>點選下列項目即可進入教學遊戲</div>
+        <div class="info"><strong>提示：</strong>點選卡片即可開始遊戲</div>
         <ul id="fileList"></ul>
 
         <div id="pagination" class="pagination" style="display:none;">
             <button id="prevBtn" onclick="changePage(-1)">◀ 上一頁</button>
-            <span id="pageInfo"></span>
+            <span id="pageInfo" style="display:flex; align-items:center; font-weight:bold; color:#555;"></span>
             <button id="nextBtn" onclick="changePage(1)">下一頁 ▶</button>
         </div>
 
@@ -136,7 +203,7 @@
 <script>
 let allFiles = [];
 let currentPage = 1;
-const itemsPerPage = 10;
+const itemsPerPage = 10; // 保持每頁 10 個，不變動設定
 
 function getRepoInfo() {
     return { username: 'happy690331', repo: 'teacher', path: '' };
@@ -150,15 +217,34 @@ async function fetchFileList() {
         const res = await fetch(apiUrl);
         const files = await res.json();
 
+        // 1. 先建立一個圖片對應表 (檔名不含副檔名 -> 圖片完整檔名)
+        const imageMap = new Map();
+        files.forEach(f => {
+            if (f.type === 'file' && f.name.match(/\.(png|jpg|jpeg|gif)$/i)) {
+                // 移除副檔名取得 baseName (例如 game.png -> game)
+                const baseName = f.name.replace(/\.(png|jpg|jpeg|gif)$/i, '');
+                imageMap.set(baseName, f.name);
+            }
+        });
+
+        // 2. 過濾出 HTML 檔案並組合資料
         allFiles = files.filter(f =>
             f.type === 'file' &&
             f.name.endsWith('.html') &&
             f.name !== 'index.html'
-        );
+        ).map(f => {
+            const baseName = f.name.replace('.html', '');
+            return {
+                fileName: f.name,
+                displayName: baseName, // 用於顯示的名稱
+                image: imageMap.get(baseName) || null // 如果有對應圖片就存入，否則為 null
+            };
+        });
 
         displayFiles();
     } catch (e) {
-        document.getElementById('loading').innerText = '無法讀取檔案';
+        console.error(e);
+        document.getElementById('loading').innerHTML = '<p style="color:red">無法讀取檔案列表，請檢查網路或儲存庫設定。</p>';
     }
 }
 
@@ -170,35 +256,62 @@ function displayFiles() {
     list.innerHTML = '';
 
     const totalPages = Math.ceil(allFiles.length / itemsPerPage);
+    // 確保 currentPage 不會超出範圍
+    if (currentPage > totalPages && totalPages > 0) currentPage = totalPages;
+    if (currentPage < 1) currentPage = 1;
+
     const start = (currentPage - 1) * itemsPerPage;
     const pageFiles = allFiles.slice(start, start + itemsPerPage);
 
     pageFiles.forEach(f => {
         const li = document.createElement('li');
         const a = document.createElement('a');
-        a.href = f.name;
-        a.textContent = '📄 ' + f.name;
+        a.href = f.fileName;
+
+        // 縮圖邏輯
+        let thumbContent;
+        if (f.image) {
+            // 如果有找到對應圖片
+            thumbContent = `<img src="${f.image}" alt="${f.displayName}" loading="lazy">`;
+        } else {
+            // 如果沒有圖片，顯示預設圖示
+            thumbContent = `<span class="thumb-icon">🎮</span>`;
+        }
+
+        a.innerHTML = `
+            <div class="thumb-box">
+                ${thumbContent}
+            </div>
+            <div class="title-box">
+                <span class="title-text">${f.displayName}</span>
+            </div>
+        `;
+        
         li.appendChild(a);
         list.appendChild(li);
     });
 
     document.getElementById('count').textContent =
-        `共 ${allFiles.length} 個 HTML 檔案`;
+        `共 ${allFiles.length} 個遊戲`;
 
     const pagination = document.getElementById('pagination');
+    const pageInfo = document.getElementById('pageInfo');
+    
     if (totalPages > 1) {
         pagination.style.display = 'flex';
-        document.getElementById('pageInfo').textContent =
-            `第 ${currentPage} 頁 / 共 ${totalPages} 頁`;
+        pageInfo.textContent = `第 ${currentPage} 頁 / 共 ${totalPages} 頁`;
         document.getElementById('prevBtn').disabled = currentPage === 1;
         document.getElementById('nextBtn').disabled = currentPage === totalPages;
+    } else {
+        pagination.style.display = 'none';
     }
 }
 
 function changePage(step) {
     currentPage += step;
     displayFiles();
-    window.scrollTo({ top: 0, behavior: 'smooth' });
+    // 捲動到容器頂部而不是整個頁面頂部，體驗較好
+    document.querySelector('.container').scrollIntoView({ behavior: 'smooth' });
 }
 
 document.addEventListener('DOMContentLoaded', fetchFileList);
